# gyrotriage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release-check.yml
Formula/: gyrotriage.rb
docs/: adr-002-single-file-input.md  adr-003-no-csv-output.md  adr-004-visual-output.md  architectural-decision.md  concept.md  recommendation-algorithm.en.md  recommendation-algorithm.ja.md  spec.md  telemetry-parser-reference.md  todo.md
src/: analyze.rs  chart.rs  downsample.rs  error.rs  extract.rs  main.rs  output.rs  recommend.rs  sparkline.rs  spectrum.rs  terminal.rs
