[package]
name = "gyrotriage"
version = "1.1.0-rc"
edition = "2021"
description = "DJI FPVドローンのMP4からクォータニオンを抽出し、ブレ度合いのスコアリング・判定・Gyroflow推奨パラメータ提示を行うCLIツール"

[dependencies]
telemetry-parser = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
plotters = "0.3"
image = "0.25"
base64 = "0.22"
libc = "0.2"
rustfft = "6.4.1"
