[package]
name = "gyrotriage"
version = "1.2.0"
edition = "2021"
description = "Score shake severity from DJI FPV drone MP4 and suggest Gyroflow stabilization parameters"

[dependencies]
telemetry-parser = "0.2"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
plotters = "0.3"
image = "0.25"
base64 = "0.22"
libc = "0.2"
rustfft = "6.4.1"
